# Rover_Lab

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
log/: latest_build
my_first_simulation/controllers/EPuckAvoidController/: EPuckAvoidController
my_first_simulation/protos/: FourWheelsR.proto
my_first_simulation/worlds/: .4_wheeled_robot.wbproj  .Robot_evasor.wbproj  .my_first_simulation.wbproj  4_wheeled_robot.wbt  my_first_simulation.wbt
my_package/: setup.py
my_package/install/: local_setup.sh  setup.sh
my_package/log/: latest_build
my_package/resource/: my_robot.urdf
my_package/worlds/: .my_world.wbproj
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/src/simulador/my_package/: CMakeLists.txt  package.xml
rover/: setup.py
rover/install/: local_setup.sh  setup.sh
rover/launch/: rover_launch.py
rover/log/: latest_build
rover/resource/: my_rover.urdf
rover/rover/: my_rover_driver.py  rover_evasor.py  rover_ros2.py
rover/worlds/: .4_wheeled_robot.wbproj  4_wheeled_robot.wbt
rover_fisico/ROS2_ROVER/install/: local_setup.sh  setup.sh
rover_fisico/ROS2_ROVER/log/: latest_build
rover_fisico/STM32CubelDE/.metadata/: .log4j2.xml  version.ini
rover_fisico/STM32CubelDE/Motor/: .cproject  .mxproject  Motor.ioc
rover_fisico/STM32CubelDE/Read_IMU/: .cproject  .mxproject
rover_ros2/: package.xml  setup.cfg  setup.py
rover_ros2/launch/: rover_launch.py
rover_ros2/rover_ros2/: arm_node.py  rover_node.py
rover_ros2/worlds/: .Rover_Ros.wbproj  Rover_Ros.wbt
(+201 files in other folders)
